# Ortos_II

./: .gitignore  CMakeLists.txt  README.md  ROMAN_NUMERALS_CHANGES.md  ROMAN_NUMERALS_README.md  build_and_run.sh  create_roman_numerals.py  generate_health_sprites.py  make_health_variants_transparent.py  run_game.sh  savegame.json  savegame_slot1.json  savegame_slot2.json  savegame_slot3.json  split_xpbar.py  test_temp_system.cpp  verify_transparency.py
assets/graphic/enviroment/: hands.aseprite
assets/maps/: catacombs.tsx  final.json  map.txt  mapa.json  maptest.json  test.json
assets/sounds/: README.md
config/: game_config.cfg
docs/: USE_CASES.md
include/: AudioManager.h  Enemy.h  InputHandler.h  Player.h  Projectile.h  TextRenderer.h  TileMap.h  UI.h
include/glad/: glad.h
saves/: game_data.db  savegame_slot1.json  savegame_slot2.json  savegame_slot3.json
shaders/: default_fragment_shader.glsl  default_vertex_shader.glsl
src/: Application.cpp  AudioManager.cpp  BloodEffect.cpp  Enemy.cpp  InputHandler.cpp  Player.cpp  Projectile.cpp  TextRenderer.cpp  TileMap.cpp  UI.cpp  UIAudioManager.cpp  glad.c  main.cpp
src/audio/: AudioManager.cpp  AudioManager.h  UIAudioManager.cpp  UIAudioManager.h
src/collision/: CollisionManager.cpp  CollisionManager.h
src/config/: ConfigManager.cpp  ConfigManager.h
src/core/: GameInitializer.cpp  GameInitializer.h  GameStateManager.cpp  GameStateManager.h  GameplayManager.cpp  GameplayManager.h
src/database/: DatabaseManager.cpp  DatabaseManager.h
src/effects/: BloodEffect.cpp  BloodEffect.h  DamageNumber.cpp  DamageNumber.h  GateEffect.cpp  GateEffect.h
src/enemy/: Enemy.cpp  Enemy.h
src/game/: GameLoopManager.cpp  GameLoopManager.h  GameStateManager.cpp  GameStateManager.h
src/input/: InputHandler.cpp  InputHandler.h  InputManager.cpp  InputManager.h
src/map/: TileMap.cpp  TileMap.h  tinyxml2.cpp
src/player/: Player.cpp  Player.h
src/projectile/: Projectile.cpp  Projectile.h
src/save/: EnhancedSaveManager.cpp  EnhancedSaveManager.h  GameStateManager.cpp  GameStateManager.h  SaveData.cpp  SaveData.h  SaveManager.cpp  SaveManager.h  SaveSlot.cpp  SaveSlot.h
src/ui/: AnimatedHealthBar.cpp  AnimatedHealthBar.h  AnimatedXPBar.cpp  AnimatedXPBar.h  RomanNumeralRenderer.cpp  RomanNumeralRenderer.h  TextRenderer.cpp  TextRenderer.h  UI.cpp  UI.h
